Added payments, balance_sheet and bills with balance_sheet

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -51,3 +51,9 @@ encryption:
 file:
   upload:
     location: /users/vendors/
+
+bill-generator:
+  scheduler:
+    enable: false
+  cron:
+    expression: "* * */10 * * ?"
