--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,10 +1,12 @@
-
 spring:
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto=create-drop: none
     properties:
       hibernate:
+        show_sql: true
+        format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
   cache:
     type: redis
